base-page-style.css
@import url(/material/theme.css);

:root{
    --header-height: 80px;
}

html, body {
    font-family: 'Varela Round', sans-serif;
    background-color: var(--md-sys-color-background);
    color: var(--md-sys-color-on-background);
}

.centered {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.center-x {
    left: 50%;
    transform: translateX(-50%);
}

.spacing-panel {
    position: relative;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
}

.options-container {
    pointer-events: none; 
}

.options-container > a {
    all: unset;
    cursor: pointer;
    pointer-events: all;
    margin-top: 2px;
    margin-bottom: 2px;
}
.options-container > a:hover {
    filter: brightness(1.5);
}

.document {
    height: 100%;
    width: 90vw;
    max-width: 900px;
}

@keyframes scaleup-bar {
    from {
        left: 45%;
        right: 45%;
        border-radius: 40px;
        font-size: 0;
        color: transparent;
    }
    50% {
        color: transparent;
    }
    95% {
        border-radius: 5px;
    }
    100% {
        left: 0;
        right: 0;
        border-radius: 0;
    }
}

.header {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    animation: 0.3s scaleup-bar;
    z-index: 3;
    height: var(--header-height);
    background-color: var(--md-sys-color-primary-container);
    color: var(--md-sys-color-on-primary-container);
}
@media (prefers-reduced-motion) {
    .header {
        animation: 1s scaleup-bar;
    }
}

.header-title {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    margin-top: 0;
    margin-left: 10px;
    font-size: calc(var(--header-height) - 20px);
}

.header-options {
    position: absolute;
    top: 50%;
    right: 0;
    transform: translateY(-50%);
    font-size: calc(var(--header-height) - 60px);
    margin-right: 20px;
    width: 20em;
}
.header-options > * {
    width: 100px;
}

.below-header {
    position: fixed;
    padding-top: var(--header-height);
}

@media screen and (max-width: 730px) {
    .header-title {
        display: none;
    }
    .header-options {
        width: 100%;
        margin-right: 0;
    }
}

